--- a/PBI - HTML dashboard design/index.html
+++ b/PBI - HTML dashboard design/index.html
@@ -7,11 +7,8 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <ul>
-        <li>opcion 1</li>
-        <li>opcion 2</li>
-        <li>opcion 3</li>
-        <li>opcion 4</li>
-    </ul>
+    <div>
+        <img class="player" src="https://drive.google.com/thumbnail?id=1vcG8ZyF6rYRo0ISlvIWeAttsea4mB81J" alt="player">
+    </div>
 </body>
 </html>
